Fix credit on mobile

--- a/index.css
+++ b/index.css
@@ -141,6 +141,7 @@ body {
 		background: var(--bg) !important;
 	}
 
+	#credit,
 	#filters {
 		left: -90vw;
 		transition: left 0.2s
